Fix ghostmatyr on IE

--- a/Web/style.scss
+++ b/Web/style.scss
@@ -475,11 +475,6 @@ $ulPadding: 4px;
 	display: inline-block;
 }
 
-.rohBot.blur {
-	color: transparent;
-	text-shadow: 0 0 0.5em $colWeb, 0 0 0.25em $colWeb, 0 0 0.1em darken($colWeb, 15);
-}
-
 .rohBot.red {
 	color: rgb(220, 40, 50);
 }
@@ -495,8 +490,8 @@ $ulPadding: 4px;
 }
 
 .rohBot.ghostmatyr {
-	color: transparent;
-	text-shadow: #add8e6 0 0 1px;
+	color: rgb(129, 162, 172);
+	text-shadow: rgb(129, 162, 172) 0 0 2px;
 	-webkit-transform: rotate(3deg);
 	transform: rotate(3deg);
 	display: inline-block;
